# csci1515-final-proj

./: .gitignore  CMakeLists.txt
.devcontainer/: devcontainer.json
cmake/: Doctest.cmake
config/: arbiter0_config.json  arbiter1_config.json  common_config.json  registrar_config.json  tallyer_config.json  voter0_config.json  voter1_config.json  voter2_config.json
disk/: README.md
include-shared/: config.hpp  constants.hpp  keyloaders.hpp  logger.hpp  messages.hpp  util.hpp
include/drivers/: crypto_driver.hpp  db_driver.hpp  repl_driver.hpp
include/pkg/: arbiter.hpp  election.hpp  registrar.hpp  tallyer.hpp  voter.hpp
src-shared/: config.cxx  keyloaders.cxx  logger.cxx  messages.cxx  util.cxx
src/cmd/: arbiter.cxx  registrar.cxx  tallyer.cxx  voter.cxx
src/drivers/: crypto_driver.cxx  db_driver.cxx  network_driver.cxx
src/pkg/: arbiter.cxx  election.cxx  registrar.cxx  tallyer.cxx  voter.cxx
test/: test_provided.cxx
